AG-939 - Fixed animation issue expanding/collapsing master detail

--- a/packages/ag-grid-community/src/styles/ag-grid.scss
+++ b/packages/ag-grid-community/src/styles/ag-grid.scss
@@ -180,7 +180,6 @@ $icons: aggregation arrows asc checkbox-checked-readonly checkbox-checked checkb
 
 .ag-center-cols-viewport {
     width: 100%;
-    height: auto;
     overflow-x: auto;
 }
 
